client: SAST (SonarLint) Fixes
- CHANGELOG > Add maint note.
- ExtensionClientIntegration > Use lambdas vs inner classes where
possible. Use constants from InputEvent vs. KeyEvent.
- MissingUrlsthread > Make method static where practical.
- OptionsPassiveScan > Remove useless semi-colon. Simplify stream toList
handling.
- PopupMenuClientOpenInBrowser > Use lambdas vs inner classes where
possible.
- PopupMenuItemClient > Use method reference vs lambda.
- PopupMenuItemClientDetails > Use method reference vs lambda.
- PopupMenuItemClientHistory > Use method reference vs lambda.
- PopupMenuItemClientOpenInBrowser > Remove unnecessary curly braces.
- PopupMenuSpider > Return statement directly vs using if where
practical. Streamline switch cases with comma notation.
- SensitiveInfoInStorageScanRule > Adjust enum values to use full caps,
and have a name to be used for resources messages.
Adjust regex to use \d instead of [0-9]. Make methods static where
practical.
- Messages.properties > Make KVPs match enum values.
- Scan rules & unit tests > Updated CWEs to not use 200.

Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>